--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 				</section>
 
 				<section>
+					<h2>Today's Goals</h2>
+					<ul>
+						<li>Introduce the Deis PaaS</li>
+						<li>Briefly cover etcd, fleet, Ceph</li>
+						<li>Touch on container schedulers</li>
+					</ul>
+				</section>
+
+				<section>
           <img src="img/me.jpg" class="stretched" style="border:none;background:none;"/>
           <br/>
 					<ul>
@@ -271,7 +280,16 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update &amp;&amp; apt-get install -yq
 				</section>
 
 				<section>
-					<h2>Schedulers</h2>
+					<h2>Why do we need a scheduler?</h2>
+					<ul>
+						<li>Workload placement</li>
+						<li>Resource management</li>
+						<li>Internal service discovery</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Container Schedulers</h2>
 					<ul>
 						<li>CoreOS fleet</li>
 						<li>Apache Mesos</li>
@@ -311,6 +329,16 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update &amp;&amp; apt-get install -yq
 						<li><a href="https://github.com/deis/deis">https://github.com/deis/deis</a></li>
 						<li><a href="http://docs.deis.io">http://docs.deis.io</a></li>
 						<li>#deis @ freenode</li>
+				</section>
+
+				<section>
+					<h2>Today's Goals</h2>
+					<ul>
+						<li>Introduce the Deis PaaS</li>
+						<li>Briefly cover etcd, fleet, Ceph</li>
+						<li>Touch on container schedulers</li>
+					</ul>
+					<p><strong>...now go learn more!</strong></p>
 				</section>
 
 				<section>
