--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update &amp;&amp; apt-get install -yq
 						<li>CoreOS fleet</li>
 						<li>Apache Mesos</li>
 						<li>Docker Swarm</li>
+						<li>HashiCorp Nomad</li>
 						<li>Google Kubernetes</li>
 					</ul>
 				</section>
