Add git push workflow

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
 				</section>
 
 				<section>
+					<img src="img/DeisGitPushWorkflow.png" class="stretch" style="border:none;background:none;box-shadow:0 0 0"/>
+				</section>
+
+				<section>
 					<img src="img/DeisFoundation.png" class="stretch" style="border:none;background:none;box-shadow:0 0 0"/>
 				</section>
 
